fixed column alignment

--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ div {
   background-color: rgb(207, 96, 52);
   padding-top: 5rem;
   padding-bottom: 5rem;
-  padding-left: 3rem;
+  text-align: left;
+  padding-left: 6rem;
 }
 
 h1 {
@@ -158,8 +159,8 @@ h4 {
   font-style: normal;
   line-height: 1.3;
   float: left;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
   padding-right: 3rem;
   text-transform: uppercase;
 }
@@ -218,19 +219,6 @@ a {
   height: 10rem;
 }
 
-/*Three Column */
-#container-three {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Creates 3 equal-width columns */
-  gap: 10px;
-  justify-content: space-between;
-  background-color: rgb(227, 223, 188);
-  text-align: center;
-  padding: 0px;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
 /* Two Column */
 .column {
   float: left;
@@ -257,34 +245,16 @@ a {
 
 /* ˏˋ°•*⁀➷ ˏˋ°•*⁀➷ ˏˋ°•*⁀➷ */
 
-/* Two Column */
-.column {
-  float: left;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.left {
-  width: 33.33%;
-}
-
-.right {
-  width: 66.66%;
-}
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* ˏˋ°•*⁀➷ ˏˋ°•*⁀➷ ˏˋ°•*⁀➷ */
-
+/* footer */
 .parent-container {
   display: flex;
   justify-content: space-between;
-  padding: 0;
+}
+
+#fix-padding {
+  padding-left: 3rem;
+}
+
+ol {
+  padding: 1rem;
 }
